<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/profile"></item>

    <item
        android:id="@+id/invoices"
        android:enabled="true"
        android:icon="@drawable/ic_file_black_24dp"
        android:title="@string/invoices"></item>

    <item
        android:id="@+id/about"
        android:enabled="true"
        android:icon="@drawable/ic_format_quote_black_24dp"
        android:title="@string/about"></item>

    <item
        android:id="@+id/logout"
        android:enabled="true"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/logout"></item>
</menu>