<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="15dp"
        android:layout_margin="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.denzcoskun.imageslider.ImageSlider
            android:id="@+id/imgSlider"
            android:layout_height="100dp"
            android:layout_width="150dp"
            app:iss_auto_cycle="true"
            app:iss_period="1000"
            app:iss_delay="1000"
            app:iss_text_align="CENTER"
            app:iss_placeholder="@drawable/img_loading"
            app:iss_error_image="@drawable/img_broken"
            />
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/product_categories" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvProductCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/new_products" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvNewProducts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/popular_products" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPopularProducts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></androidx.recyclerview.widget.RecyclerView>


</LinearLayout>