<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PaymentActivity">

        <LinearLayout
            android:id="@+id/lytPayment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgPayment"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/img_full_basket"
                    android:transitionName="trImgPayment" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-25dp"
                android:layout_marginBottom="-15dp"
                android:background="@color/white"
                android:elevation="8dp"
                app:cardCornerRadius="25dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="30dp"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/payment_description"
                        android:textColor="@color/primary"
                        android:textSize="16dp" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/first_name"
                        app:boxCornerRadiusBottomEnd="15dp"
                        app:boxCornerRadiusBottomStart="15dp"
                        app:boxCornerRadiusTopEnd="15dp"
                        app:boxCornerRadiusTopStart="15dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etFirstNamePayment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/last_name"
                        app:boxCornerRadiusBottomEnd="15dp"
                        app:boxCornerRadiusBottomStart="15dp"
                        app:boxCornerRadiusTopEnd="15dp"
                        app:boxCornerRadiusTopStart="15dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etLastNamePayment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/username"
                        app:boxCornerRadiusBottomEnd="15dp"
                        app:boxCornerRadiusBottomStart="15dp"
                        app:boxCornerRadiusTopEnd="15dp"
                        app:boxCornerRadiusTopStart="15dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etUsernamePayment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/password"
                        app:boxCornerRadiusBottomEnd="15dp"
                        app:boxCornerRadiusBottomStart="15dp"
                        app:boxCornerRadiusTopEnd="15dp"
                        app:boxCornerRadiusTopStart="15dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPasswordPayment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/email"
                        app:boxCornerRadiusBottomEnd="15dp"
                        app:boxCornerRadiusBottomStart="15dp"
                        app:boxCornerRadiusTopEnd="15dp"
                        app:boxCornerRadiusTopStart="15dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etEmailPayment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/mobile"
                        app:boxCornerRadiusBottomEnd="15dp"
                        app:boxCornerRadiusBottomStart="15dp"
                        app:boxCornerRadiusTopEnd="15dp"
                        app:boxCornerRadiusTopStart="15dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etMobilePayment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/tel"
                        app:boxCornerRadiusBottomEnd="15dp"
                        app:boxCornerRadiusBottomStart="15dp"
                        app:boxCornerRadiusTopEnd="15dp"
                        app:boxCornerRadiusTopStart="15dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etTelPayment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/address"
                        app:boxCornerRadiusBottomEnd="15dp"
                        app:boxCornerRadiusBottomStart="15dp"
                        app:boxCornerRadiusTopEnd="15dp"
                        app:boxCornerRadiusTopStart="15dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etAddressPayment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textMultiLine" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/postal"
                        app:boxCornerRadiusBottomEnd="15dp"
                        app:boxCornerRadiusBottomStart="15dp"
                        app:boxCornerRadiusTopEnd="15dp"
                        app:boxCornerRadiusTopStart="15dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPostalPayment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:singleLine="true" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <ProgressBar
                        android:id="@+id/pbPayment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="25dp"
                        android:visibility="gone" />

                    <Button
                        android:id="@+id/btnPayment"
                        android:layout_width="300dp"
                        android:layout_height="44dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="30dp"
                        android:layout_marginBottom="25dp"
                        android:background="@drawable/shape_button"
                        android:gravity="center"
                        android:text="@string/place_order"
                        android:textColor="@color/white" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>